Update style.css and refactoring

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="container">
-    <button class="start-button">Start</button>
+    <button class="start-button">&#128578</button>
     <div class="grid"></div>
     <div>Flags left: <span id='flags-left'></span></div>
     <div>Time elapsed: <span class='timer'></span></div>
