--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="container">
     <button class="start-button">&#128578</button>
     <div class="grid"></div>
-    <div>Flags left: <span id='flags-left'></span></div>
+    <div>Flags left: <span class='flags-left'></span></div>
     <div>Time elapsed: <span class='timer'></span></div>
-    <div id="result"></div>
+    <div class="result"></div>
   </div>
 
 </body>
