--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="UTF-8">
   <title>Minesweeper</title>
-  <link rel="stylesheet" href="style.css"></link>
+  <link rel="stylesheet" href="style.css">
+  </link>
   <script src="app.js" charset="utf-8"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
   <div class="container">
     <button class="start-button">&#128578</button>
     <div class="grid"></div>
     <div>Flags left: <span class='flags-left'></span></div>
-    <div>Time elapsed: <span class='timer'></span></div>
+    <div>Time elapsed: <span class='timer'>0:0</span></div>
     <div class="result"></div>
   </div>
 
 </body>
+
 </html>
