--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <title>Minesweeper</title>
   <link rel="stylesheet" href="style.css">
-  </link>
   <script src="app.js" charset="utf-8"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
 </head>
 
@@ -16,7 +17,7 @@
     <button class="start-button">&#128578</button>
     <div class="grid"></div>
     <div>Flags left: <span class='flags-left'></span></div>
-    <div>Time elapsed: <span class='timer'>0:0</span></div>
+    <div>Time elapsed: <span class='timer'>00:00</span></div>
     <div class="result"></div>
   </div>
 
